feat: updated refresh token implementation. You can now send it as a cookie to get a new access token.