@@ -4,6 +4,8 @@ import edu.ntnu.idatt2105.backend.dto.images.ImageLoadDTO;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.core.io.*;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -23,114 +25,161 @@ import java.util.Objects;
 public class ImageService {
 
     private final Logger LOGGER = LoggerFactory.getLogger(ImageService.class);
-    private final Path STORAGE_DIRECTORY = Paths.get("src/main/resources/images");
+    private final Path STORAGE_DIRECTORY = Paths.get("src/main/resources/images/");
     private final List<String> VALID_FILES = Arrays.asList("image/png", "image/jpeg", "image/PNG",
                                                                 "image/JPG", "image/jpg");
 
-    //TODO: add initialization of main storage directory, could be in the shell script.
-
     /**
-     * This method creates a subdirectory in the main storage directory for the given user.
-     * @param userId        The id of the user.
-     * @throws IOException  Potential exceptions with creating directory.
+     * This method retrieves an image from the server. The image is retrieved by its name.
+     *
+     * @param fileName The name of the image.
+     * @return The image.
+     * @throws MalformedURLException If the image could not be found.
      */
-    public void initializeUserDir(Long userId) throws IOException {
-        LOGGER.info("Initializing user's image directory.");
-        Path filePath = Paths.get(STORAGE_DIRECTORY.toString(), String.valueOf(userId));
-        Files.createDirectories(filePath);
-    }
-
-    public void removeUserDir(Long userId) throws IOException {
-        LOGGER.info("Starting removal of  user's image directory.");
-
-        Path filePath = Paths.get(STORAGE_DIRECTORY.toString(), String.valueOf(userId));
-        Files.walkFileTree(filePath, new SimpleFileVisitor<>() {
-            @Override
-            public FileVisitResult visitFile(Path childFile, BasicFileAttributes attributes) throws IOException {
-                try{
-                Files.delete(childFile);
-                } catch (Exception e) {
-                    throw new FileSystemException("Something went wrong while deleting images in directory");
-                }
-                return FileVisitResult.CONTINUE;
-            }
-
-            @Override
-            public FileVisitResult postVisitDirectory(Path childDirectory, IOException ioException) throws IOException {
-                try {
-                    Files.delete(childDirectory);
-                } catch (Exception e){
-                    throw new DirectoryNotEmptyException("Something went wrong while sub-directories");
-
-                }
-                return FileVisitResult.CONTINUE;
-            }
-        });
-
+    public ResponseEntity<Resource> getFile(String fileName) throws MalformedURLException {
         try {
-            Files.delete(filePath);
-        } catch (Exception e) {
-            throw new DirectoryNotEmptyException("The image directory is not empty and could not be deleted.");
+
+            Path file = Paths.get(STORAGE_DIRECTORY+fileName).toAbsolutePath().normalize();
+            Resource resource = new UrlResource(file.toUri());
+            if (resource.exists() || resource.isReadable()) {
+                return ResponseEntity.ok().header(HttpHeaders.CONTENT_DISPOSITION,
+                        "attachment; filename=\"" + resource.getFilename() + "\"").body(resource);
+            } else {
+                return ResponseEntity.notFound().build();
+            }
+        } catch (MalformedURLException e) {
+            return ResponseEntity.badRequest().build();
         }
     }
 
     /**
-     * This method saves a given image to the user's image directory.
-     * @param file                  The image to be saved.
-     * @param userId                The user saving the image.
-     * @return                      The file path of the saved image.
-     * @throws FileSystemException  An error with saving the image.
+     * Saves an image to the server. The image has the same name as the user id.
+     *
+     * @param file     The image to be saved.
+     * @param filename The name of the image.
+     * @throws IOException If the image could not be saved.
      */
-    public String saveImage(MultipartFile file, Long userId) throws FileSystemException {
-        String fileName = file.getOriginalFilename();
-
+    public void saveImage(MultipartFile file, long filename) throws IOException {
         if (!VALID_FILES.contains(file.getContentType())) {
             throw new InvalidPathException(Objects.requireNonNull(file.getContentType()),"Invalid Path Extension.");
         }
-
-        Path newFilePath = Paths.get(STORAGE_DIRECTORY.toString(), String.valueOf(userId), fileName);
-
+        Path newFilePath = Paths.get(STORAGE_DIRECTORY.toString(), String.valueOf(filename));
         try {
-            file.transferTo(newFilePath);
+            Files.copy(file.getInputStream(), newFilePath, StandardCopyOption.REPLACE_EXISTING);
         } catch (Exception e) {
             throw new FileSystemException("File could not be saved");
         }
-        return newFilePath.getFileName().toString();
     }
 
-    /**
-     * This method loads a given image from the user's image directory.
-     * @param path                      Path of the image.
-     */
-    public ImageLoadDTO loadImage(String path) throws IOException {
-        LOGGER.info("Attempting to retrieve the image.");
-        Path pathObject = Paths.get(STORAGE_DIRECTORY.toString(), path);
-        byte[] image = Files.readAllBytes(pathObject);
 
 
-        String contentType = switch (path.split("\\.")[0]) {
-            case "jpg", "jpeg":
-                yield "image/jpeg";
-            case "png":
-                yield "image/png";
-            case "gif":
-                yield  "image/gif";
-            default:
-                yield "application/octet-stream";
-        };
-        LOGGER.info("Image resource retrieved.");
-        return ImageLoadDTO.builder().image(image).contentType(contentType).build();
-    }
 
-    /**
-     * This method deletes an image given its path.
-     * @param filePath  Path of the image.
-     * @return          Whether the action was successful.
-     */
-    public boolean deleteImage(String filePath) throws IOException {
-        LOGGER.info("Deleting image at " + filePath);
-        return Files.deleteIfExists(Path.of(filePath));
-    }
+
+
+//    //TODO: add initialization of main storage directory, could be in the shell script.
+//
+//    /**
+//     * This method creates a subdirectory in the main storage directory for the given user.
+//     * @param userId        The id of the user.
+//     * @throws IOException  Potential exceptions with creating directory.
+//     */
+//    public void initializeUserDir(Long userId) throws IOException {
+//        LOGGER.info("Initializing user's image directory.");
+//        Path filePath = Paths.get(STORAGE_DIRECTORY.toString(), String.valueOf(userId));
+//        Files.createDirectories(filePath);
+//    }
+//
+//    public void removeUserDir(Long userId) throws IOException {
+//        LOGGER.info("Starting removal of  user's image directory.");
+//
+//        Path filePath = Paths.get(STORAGE_DIRECTORY.toString(), String.valueOf(userId));
+//        Files.walkFileTree(filePath, new SimpleFileVisitor<>() {
+//            @Override
+//            public FileVisitResult visitFile(Path childFile, BasicFileAttributes attributes) throws IOException {
+//                try{
+//                Files.delete(childFile);
+//                } catch (Exception e) {
+//                    throw new FileSystemException("Something went wrong while deleting images in directory");
+//                }
+//                return FileVisitResult.CONTINUE;
+//            }
+//
+//            @Override
+//            public FileVisitResult postVisitDirectory(Path childDirectory, IOException ioException) throws IOException {
+//                try {
+//                    Files.delete(childDirectory);
+//                } catch (Exception e){
+//                    throw new DirectoryNotEmptyException("Something went wrong while sub-directories");
+//
+//                }
+//                return FileVisitResult.CONTINUE;
+//            }
+//        });
+//
+//        try {
+//            Files.delete(filePath);
+//        } catch (Exception e) {
+//            throw new DirectoryNotEmptyException("The image directory is not empty and could not be deleted.");
+//        }
+//    }
+//
+//    /**
+//     * This method saves a given image to the user's image directory.
+//     * @param file                  The image to be saved.
+//     * @param userId                The user saving the image.
+//     * @return                      The file path of the saved image.
+//     * @throws FileSystemException  An error with saving the image.
+//     */
+//    public String saveImage(MultipartFile file, Long userId) throws FileSystemException {
+//        String fileName = file.getOriginalFilename();
+//
+//        if (!VALID_FILES.contains(file.getContentType())) {
+//            throw new InvalidPathException(Objects.requireNonNull(file.getContentType()),"Invalid Path Extension.");
+//        }
+//
+//        Path newFilePath = Paths.get(STORAGE_DIRECTORY.toString(), String.valueOf(userId), fileName);
+//
+//        try {
+//            file.transferTo(newFilePath);
+//        } catch (Exception e) {
+//            throw new FileSystemException("File could not be saved");
+//        }
+//        return newFilePath.getFileName().toString();
+//    }
+//
+//    /**
+//     * This method loads a given image from the user's image directory.
+//     * @param path                      Path of the image.
+//     */
+//    public ImageLoadDTO loadImage(String path) throws IOException {
+//        LOGGER.info("Attempting to retrieve the image.");
+//        Path pathObject = Paths.get(STORAGE_DIRECTORY.toString(), path);
+//        byte[] image = Files.readAllBytes(pathObject);
+//
+//
+//        String contentType = switch (path.split("\\.")[0]) {
+//            case "jpg", "jpeg":
+//                yield "image/jpeg";
+//            case "png":
+//                yield "image/png";
+//            case "gif":
+//                yield  "image/gif";
+//            default:
+//                yield "application/octet-stream";
+//        };
+//        LOGGER.info("Image resource retrieved.");
+//        return ImageLoadDTO.builder().image(image).contentType(contentType).build();
+//    }
+//
+//    /**
+//     * This method deletes an image given its path.
+//     * @param filePath  Path of the image.
+//     * @return          Whether the action was successful.
+//     */
+//    public boolean deleteImage(String filePath) throws IOException {
+//        LOGGER.info("Deleting image at " + filePath);
+//        return Files.deleteIfExists(Path.of(filePath));
+//    }
 
 
 
